--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -177,6 +177,74 @@
       overflow-y: scroll;
     }
 
+    .tests-container {
+      height: 700px;
+      width: 600px;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      display: none;
+    }
+
+    .tests-header {
+      width: 100%;
+      height: 100px;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+      margin-bottom: 20px;
+    }
+
+    .tests-header-form {
+      margin-top: 10px;
+      width: 100%;
+      height: 40px;
+      display: flex;
+      gap: 15px;
+      align-items: center;
+
+      & span {
+        cursor: pointer;
+      }
+
+      & span:hover {
+        font-weight: bold;
+      }
+    }
+
+    .tests-item {
+      width: 98%;
+      margin-left: 1%;
+      padding: 10px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border-bottom: 1px solid #ddd;
+      cursor: pointer;
+
+      & span {
+        width: 30%;
+      }
+
+      & span:last-child {
+        text-align: right;
+        cursor: pointer;
+      }
+
+      & span:last-child:hover {
+        font-weight: bold;
+      }
+    }
+
+    .tests-item:hover {
+      background-color: #f1f1f1;
+    }
+
+    .tests-items-container {
+      width: 100%;
+      height: 550px;
+      overflow-y: scroll;
+    }
+
     .exam-results-header {
       width: 100%;
       height: 80px;
@@ -242,6 +310,58 @@
       border-radius: 4px;
       font-size: 12px;
     }
+
+    textarea {
+      width: 100%;
+      height: 60px;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 12px;
+    }
+
+    .tests-container-form {
+      width: 80%;
+      left: 10%;
+      padding: 5%;
+      height: 80vh;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      position: absolute;
+      top: 10vh;
+      z-index: 10;
+      background-color: white;
+      overflow-y: scroll;
+    }
+
+    .answer-block-container{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .answer-block {
+      width: 40%;
+      height: 400px;
+      padding: 20px;
+    }
+
+    .answer-input {
+      width: 90% !important;
+      margin: 10px 0 0 5%;
+    }
+
+    select {
+      width: 100% !important;
+      height: 30px;
+      padding: 12px;
+      border: 1px solid #ddd;
+      background-color: white;
+      border-radius: 4px;
+      font-size: 12px;
+      margin: 10px 0 0 0;
+    }
   </style>
 </head>
 
@@ -251,6 +371,7 @@
       <div onclick="displayContainers('resultados')">Resutados</div>
       <div onclick="displayContainers('usuarios')">Usuarios</div>
       <div onclick="displayContainers('contenido')">Contenido</div>
+      <div onclick="displayContainers('tests')">Tests</div>
     </div>
     <div id="exam-results-id" class="exam-results">
       <div class="exam-results-header"></div>
@@ -312,6 +433,241 @@
       <div id="content-items-container-id" class="content-items-container">
       </div>
     </div>
+
+    <div id="tests-container-id" class="tests-container">
+      <div class="tests-header">
+        <span>Preguntas</span>
+        <div class="tests-header-form">
+        </div>
+      </div>
+      <div id="tests-items-container-id" class="tests-items-container">
+      </div>
+    </div>
+
+    <div id="tests-container-id-form" class="tests-container-form">
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+      <div class="answer-block-container">
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+        <div class="answer-block">
+          <p>Pregunta 1</p><br />
+          <textarea placeholder="Escriba pregunta"></textarea><br />
+          <span>A</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta A" /><br />
+          <span>B</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta B" /><br />
+          <span>C</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta C" /><br />
+          <span>D</span><input type="text" class="answer-input" id="content-name" placeholder="Respuesta D" /><br />
+          <select></select>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </body>
 <script>
@@ -319,10 +675,12 @@
     document.getElementById("exam-results-id").style.display = "none"
     document.getElementById("users-container-id").style.display = "none"
     document.getElementById("content-container-id").style.display = "none"
+    document.getElementById("tests-container-id").style.display = "none"
 
     if (container == "usuarios") document.getElementById("users-container-id").style.display = "block"
     if (container == "resultados") document.getElementById("exam-results-id").style.display = "block"
     if (container == "contenido") document.getElementById("content-container-id").style.display = "block"
+    if (container == "tests") document.getElementById("tests-container-id").style.display = "block"
   }
 
   const createContent = async () => {
